# mks_servo_can

./: .gitignore  .pylintrc  =10.0.0  ENHANCED_SIMULATOR_PLAN.md  LICENSE.txt  MIGRATION_PLAN_MotorDigitizer.md  README.md  check_docstrings.py  clean.sh  pyproject.toml  pytest.ini  requirements.txt
docs/: CODE_REVIEW.md  CODE_REVIEW_DOCSTRINGS.md  README.md  UNUSED_CODE_REPORT.md  manual_extracted.txt
docs/advanced_topics/: asynchronous_control_with_asyncio.md  asyncio_with_synchronous_code.md  can_protocol.md  python_and_automation.md  timing_determinism.md  troubleshooting.md
docs/getting_started/: hardware_setup.md  installation.md  prerequisites.md  running_simulator.md
docs/introduction/: key_features.md  project_overview.md  target_audience.md
docs/tutorials/: custom_kinematics.md  multi_axis_sync.md  survival_guide_can_on_linux.md
docs/user_guides/: http_debug_api.md
examples/: README_Motor_Digitizer.md  TODO  advanced_axis_control.py  basic_digitizer_demo.py  benchmark_command_latency.py  calligraphy_plotter.py  calligraphy_plotter_manual_interpolation.py  cartesian_3dof_robot.py  comprehensive_simulator_test.py  configuration_management_demo.py  dashboard_tutorial.py  digitizer_precision_test.py  enhanced_svg_plotter.py  height_map_generator.py  height_map_generator_v2.py  http_debug_api_command_example.py  http_debug_api_status_example.py  motor_digitizer.py  motor_digitizer_compat.py  multi_axis_simulator.py  single_axis_real_hw.py  svg_plotter.py  svg_plotter_documentation.md  sync_mks_axis.py  three_link_arm.py  timing_benchmark.py  two_link_planar_arm.py
mks_servo_can_library/: setup.py
mks_servo_can_library/mks_servo_can/: __init__.py  axis.py  can_interface.py  constants.py  crc.py  exceptions.py  low_level_api.py  multi_axis_controller.py  robot_kinematics.py
mks_servo_can_library/mks_servo_can/digitizer/: __init__.py  base_digitizer.py  data_structures.py  precision_analyzer.py  surface_mapping.py  utils.py
mks_servo_can_library/mks_servo_can/kinematics/: __init__.py  base_kinematics.py  eccentric_kinematics.py  linear_kinematics.py  rotary_kinematics.py
mks_servo_simulator/: setup.py
mks_servo_simulator/examples/: __init__.py  autonomous_workflow_example.py
mks_servo_simulator/mks_simulator/: __init__.py  cli.py  main.py  motor_model.py  virtual_can_bus.py
mks_servo_simulator/mks_simulator/interface/: __init__.py  config_manager.py  debug_tools.py  http_debug_server.py  interactive_controls.py  llm_debug_interface.py  performance_monitor.py  rich_dashboard.py  sdk_client.py  textual_dashboard.py
tests/: __init__.py  conftest.py  test_http_debug_server.py  test_llm_debug_interface.py
tests/determinism/: __init__.py
tests/fixtures/: library_vs_manual_analysis.md  manual_commands_v106.json
tests/hil/: __init__.py
tests/integration/: __init__.py  test_with_simulator.py
tests/simulator_compliance/: __init__.py  test_can_frame_format.py  test_crc_calculation.py  test_protocol_compliance.py
tests/unit/: __init__.py  test_axis.py  test_axis.py.bak  test_crc.py  test_crc.py.py  test_digitizer_integration.py  test_kinematics.py  test_low_level_api.py  test_low_level_api.py.bak  test_multi_axis_controller.py  test_multi_axis_controller.py.bak  test_robot_kinematics.py  test_robot_kinematics.py.bak
